--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </head>
 <body class="bg-background-dark font-display text-white selection:bg-primary/30">
     <div id="root"></div>
-    <!-- Entry Point -->
-    <script type="module" src="index.tsx"></script>
+    <!-- No-build TSX/JSX loader -->
+    <script type="module" src="https://esm.sh/run" data-main="./index.tsx"></script>
 </body>
 </html>
