--- a/index.html
+++ b/index.html
@@ -49,82 +49,39 @@
             --sab: env(safe-area-inset-bottom);
             --sal: env(safe-area-inset-left);
         }
-        .glass-panel {
-            background: rgba(255, 255, 255, 0.06);
-            backdrop-filter: blur(32px);
-            -webkit-backdrop-filter: blur(32px);
-            border: 1px solid rgba(255, 255, 255, 0.12);
-            box-shadow: 
-                0 4px 30px rgba(0, 0, 0, 0.1),
-                inset 0 1px 1px rgba(255, 255, 255, 0.05);
-        }
-        .glass-card {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-        }
-        .glass-button {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        .glass-button:hover {
-            background: rgba(255, 255, 255, 0.15);
-            border-color: rgba(255, 255, 255, 0.2);
-            transform: translateY(-1px);
-        }
-        .glass-button:active {
-            transform: translateY(0) scale(0.98);
-        }
-        .custom-scrollbar::-webkit-scrollbar {
-            width: 4px;
-        }
-        .custom-scrollbar::-webkit-scrollbar-track {
-            background: rgba(255, 255, 255, 0.02);
-        }
-        .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: rgba(255, 255, 255, 0.15);
-            border-radius: 10px;
-        }
-        .scrollbar-hide::-webkit-scrollbar {
-            display: none;
-        }
-        @keyframes float {
-            0% { transform: translateY(0px) rotate(0deg); }
-            50% { transform: translateY(-12px) rotate(1deg); }
-            100% { transform: translateY(0px) rotate(0deg); }
-        }
-        .animate-float {
-            animation: float 8s ease-in-out infinite;
-        }
         body {
-            position: fixed;
-            width: 100%;
-            height: 100%;
+            background-color: #101622;
+            margin: 0;
+            padding: 0;
             overflow: hidden;
-            touch-action: none;
-            padding: var(--sat) var(--sar) var(--sab) var(--sal);
         }
         #root {
             width: 100%;
-            height: 100%;
-            overflow-y: auto;
-            touch-action: pan-y;
+            height: 100vh;
         }
-        .text-glow {
-            text-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+        .fallback-loader {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: white;
+            font-family: 'Inter', sans-serif;
+            background: radial-gradient(circle at center, #135bec22 0%, #101622 70%);
+        }
+        .spinner {
+            width: 40px;
+            height: 40px;
+            border: 3px solid rgba(255,255,255,0.1);
+            border-top-color: #135bec;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin-bottom: 20px;
+        }
+        @keyframes spin {
+            to { transform: rotate(360deg); }
         }
     </style>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./sw.js').catch(err => console.log('SW registration failed:', err));
-        });
-      }
-    </script>
 <script type="importmap">
 {
   "imports": {
@@ -138,8 +95,15 @@
 }
 </script>
 </head>
-<body class="bg-background-dark font-display text-white selection:bg-primary/30">
-    <div id="root"></div>
+<body class="bg-background-dark font-display text-white">
+    <div id="root">
+        <div class="fallback-loader">
+            <div class="spinner"></div>
+            <p style="font-size: 10px; letter-spacing: 0.4em; text-transform: uppercase; font-weight: 900; opacity: 0.4;">
+                Initializing Aether Systems
+            </p>
+        </div>
+    </div>
     <script type="module" src="https://esm.sh/run" data-main="./index.tsx"></script>
 </body>
 </html>
