--- a/index.html
+++ b/index.html
@@ -42,23 +42,35 @@
             },
         }
 
-        // Global error handler for diagnostic overlay if the app fails to boot
+        // Global error handler for diagnostic overlay
         window.onerror = function(msg, url, lineNo, columnNo, error) {
             const root = document.getElementById('root');
-            if (root && (root.innerHTML.includes('fallback-loader') || root.innerHTML.trim() === "")) {
+            if (root) {
                 root.innerHTML = `
                     <div style="padding: 40px; color: #ff4d4d; font-family: 'Inter', sans-serif; background: #0a0e17; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
                         <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">error</span>
-                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">Aether Boot Failure</h1>
+                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">System Initialization Failed</h1>
                         <p style="opacity: 0.7; max-width: 600px; line-height: 1.6;">${msg}</p>
-                        <p style="font-size: 12px; opacity: 0.4; margin-top: 20px;">File: ${url}<br>Line: ${lineNo}, Column: ${columnNo}</p>
-                        <pre style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 12px; margin-top: 30px; text-align: left; max-width: 90%; overflow: auto; font-size: 11px;">${error?.stack || 'No extended trace available'}</pre>
-                        <button onclick="window.location.reload()" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">Retry System Initialization</button>
+                        <button onclick="window.location.reload()" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">Reset Aether Core</button>
                     </div>
                 `;
             }
             return false;
         };
+
+        // Watchdog timer: If app hasn't loaded in 10s, something is wrong
+        setTimeout(() => {
+            const root = document.getElementById('root');
+            if (root && root.querySelector('.fallback-loader')) {
+                console.warn("Aether: Boot timeout reached. Attempting diagnostic recovery...");
+                root.innerHTML += `
+                    <div style="position: fixed; bottom: 40px; left: 0; right: 0; text-align: center; z-index: 100;">
+                        <p style="color: white; opacity: 0.5; font-size: 12px; margin-bottom: 10px;">Still loading? There might be a connection or script issue.</p>
+                        <button onclick="window.location.reload(true)" style="background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2); color: white; padding: 8px 16px; rounded: 8px; cursor: pointer; font-size: 11px;">Force Reload Cache</button>
+                    </div>
+                `;
+            }
+        }, 10000);
     </script>
     <style>
         :root {
@@ -106,6 +118,7 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
