--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="theme-color" content="#101622">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="manifest" href="manifest.json">
     <title>Aether Weather & Panchang</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap" rel="stylesheet"/>
@@ -51,26 +50,13 @@
                         <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">error</span>
                         <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">System Initialization Failed</h1>
                         <p style="opacity: 0.7; max-width: 600px; line-height: 1.6;">${msg}</p>
+                        <p style="font-size: 10px; opacity: 0.3; margin-top: 10px;">${url}:${lineNo}</p>
                         <button onclick="window.location.reload()" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">Reset Aether Core</button>
                     </div>
                 `;
             }
             return false;
         };
-
-        // Watchdog timer: If app hasn't loaded in 10s, something is wrong
-        setTimeout(() => {
-            const root = document.getElementById('root');
-            if (root && root.querySelector('.fallback-loader')) {
-                console.warn("Aether: Boot timeout reached. Attempting diagnostic recovery...");
-                root.innerHTML += `
-                    <div style="position: fixed; bottom: 40px; left: 0; right: 0; text-align: center; z-index: 100;">
-                        <p style="color: white; opacity: 0.5; font-size: 12px; margin-bottom: 10px;">Still loading? There might be a connection or script issue.</p>
-                        <button onclick="window.location.reload(true)" style="background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2); color: white; padding: 8px 16px; rounded: 8px; cursor: pointer; font-size: 11px;">Force Reload Cache</button>
-                    </div>
-                `;
-            }
-        }, 10000);
     </script>
     <style>
         :root {
@@ -135,6 +121,5 @@
             </p>
         </div>
     </div>
-    <script type="module" src="https://esm.sh/run" data-main="./index.tsx"></script>
 </body>
 </html>
