--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     <script>
-        // Critical shim for libraries that expect a Node-like environment
+        // Critical environment shims
         window.process = { env: { API_KEY: "" } };
         
         tailwind.config = {
@@ -41,17 +41,18 @@
             },
         }
 
-        // Global error handler for diagnostic overlay
+        // Global diagnostic handler
         window.onerror = function(msg, url, lineNo, columnNo, error) {
+            console.error("BOOT_ERROR:", {msg, url, lineNo, error});
             const root = document.getElementById('root');
-            if (root) {
+            if (root && (root.innerHTML.includes('fallback-loader') || root.innerHTML === "")) {
                 root.innerHTML = `
-                    <div style="padding: 40px; color: #ff4d4d; font-family: 'Inter', sans-serif; background: #0a0e17; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
-                        <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">error</span>
-                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">System Initialization Failed</h1>
-                        <p style="opacity: 0.7; max-width: 600px; line-height: 1.6;">${msg}</p>
-                        <p style="font-size: 10px; opacity: 0.3; margin-top: 10px;">${url}:${lineNo}</p>
-                        <button onclick="window.location.reload()" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">Reset Aether Core</button>
+                    <div style="padding: 40px; color: #ff4d4d; font-family: 'Inter', sans-serif; background: #0a0e17; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; border: 1px solid #ff4d4d33;">
+                        <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">terminal</span>
+                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">Aether Boot Sequence Halted</h1>
+                        <p style="opacity: 0.7; max-width: 600px; line-height: 1.6; background: #000; padding: 15px; border-radius: 8px; font-family: monospace; font-size: 13px;">${msg}</p>
+                        <p style="font-size: 11px; opacity: 0.4; margin-top: 15px;">Location: ${url} @ ${lineNo}:${columnNo}</p>
+                        <button onclick="window.location.reload(true)" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">Retry Boot</button>
                     </div>
                 `;
             }
@@ -70,10 +71,12 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            width: 100vw;
+            height: 100vh;
         }
         #root {
             width: 100%;
-            height: 100vh;
+            height: 100%;
         }
         .fallback-loader {
             display: flex;
@@ -121,5 +124,10 @@
             </p>
         </div>
     </div>
+    <!-- Use a direct esm.sh loader script that supports TypeScript and Import Maps better -->
+    <script type="module">
+        import "https://esm.sh/run@1.68.0";
+    </script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
