--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
             },
         }
 
-        // Global diagnostic handler
+        // Diagnostic recovery handler
         window.onerror = function(msg, url, lineNo, columnNo, error) {
-            console.error("BOOT_ERROR:", {msg, url, lineNo, error});
+            console.error("Aether Boot Error:", {msg, url, lineNo, error});
             const root = document.getElementById('root');
             if (root && (root.innerHTML.includes('fallback-loader') || root.innerHTML === "")) {
                 root.innerHTML = `
-                    <div style="padding: 40px; color: #ff4d4d; font-family: 'Inter', sans-serif; background: #0a0e17; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; border: 1px solid #ff4d4d33;">
-                        <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">terminal</span>
-                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">Aether Boot Sequence Halted</h1>
-                        <p style="opacity: 0.7; max-width: 600px; line-height: 1.6; background: #000; padding: 15px; border-radius: 8px; font-family: monospace; font-size: 13px;">${msg}</p>
-                        <button onclick="window.location.reload(true)" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">Retry Boot</button>
+                    <div style="padding: 40px; color: #ff4d4d; font-family: 'Inter', sans-serif; background: #0a0e17; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+                        <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">sync_problem</span>
+                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">System Initialization Halted</h1>
+                        <p style="opacity: 0.7; max-width: 600px; line-height: 1.6; font-family: monospace; font-size: 12px; background: rgba(0,0,0,0.3); padding: 15px; border-radius: 8px;">${msg}</p>
+                        <button onclick="window.location.reload(true)" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; box-shadow: 0 10px 20px rgba(19,91,236,0.3);">Force Restart Systems</button>
                     </div>
                 `;
             }
@@ -103,10 +103,10 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
+    "react": "https://esm.sh/react@19",
+    "react-dom": "https://esm.sh/react-dom@19",
+    "react-dom/client": "https://esm.sh/react-dom@19/client",
+    "react/jsx-runtime": "https://esm.sh/react@19/jsx-runtime",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
@@ -119,12 +119,14 @@
         <div class="fallback-loader">
             <div class="spinner"></div>
             <p style="font-size: 10px; letter-spacing: 0.4em; text-transform: uppercase; font-weight: 900; opacity: 0.4;">
-                Initializing Aether Systems
+                Connecting to Aether...
             </p>
         </div>
     </div>
-    <!-- The 'esm.sh/run' script handles transpilation of TSX/TS directly. 
-         It must be the main script with 'data-main' pointing to your entry point. -->
+    <!-- 
+      The only script tag responsible for loading the application. 
+      esm.sh/run fetches 'index.tsx' via fetch() to bypass MIME type issues. 
+    -->
     <script type="module" src="https://esm.sh/run" data-main="./index.tsx"></script>
 </body>
 </html>
