--- a/index.html
+++ b/index.html
@@ -5,128 +5,50 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" name="viewport"/>
     <meta name="theme-color" content="#101622">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Aether Weather & Panchang</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     <script>
-        // Critical environment shims
         window.process = { env: { API_KEY: "" } };
-        
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#135bec",
-                        "background-dark": "#101622",
-                        "panchang-accent": "#ff9f43", 
-                    },
-                    fontFamily: {
-                        "display": ["Inter", "sans-serif"]
-                    },
-                    animation: {
-                        'bounce-subtle': 'bounceSubtle 3s ease-in-out infinite',
-                        'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-                    },
-                    keyframes: {
-                        bounceSubtle: {
-                            '0%, 100%': { transform: 'translateY(0)' },
-                            '50%': { transform: 'translateY(-5px)' },
-                        }
-                    }
-                },
-            },
-        }
-
-        // Diagnostic recovery handler
-        window.onerror = function(msg, url, lineNo, columnNo, error) {
-            console.error("Aether Boot Error:", {msg, url, lineNo, error});
+        window.onerror = function(msg, url, line, col, error) {
+            console.error("Aether Boot Error:", msg, "@", url, ":", line);
             const root = document.getElementById('root');
-            if (root && (root.innerHTML.includes('fallback-loader') || root.innerHTML === "")) {
-                root.innerHTML = `
-                    <div style="padding: 40px; color: #ff4d4d; font-family: 'Inter', sans-serif; background: #0a0e17; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
-                        <span class="material-symbols-outlined" style="font-size: 48px; margin-bottom: 20px;">sync_problem</span>
-                        <h1 style="font-size: 24px; margin-bottom: 10px; color: white;">System Initialization Halted</h1>
-                        <p style="opacity: 0.7; max-width: 600px; line-height: 1.6; font-family: monospace; font-size: 12px; background: rgba(0,0,0,0.3); padding: 15px; border-radius: 8px;">${msg}</p>
-                        <button onclick="window.location.reload(true)" style="margin-top: 30px; padding: 12px 24px; background: #135bec; color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; box-shadow: 0 10px 20px rgba(19,91,236,0.3);">Force Restart Systems</button>
-                    </div>
-                `;
+            if (root) {
+                root.innerHTML = `<div style="padding:40px;color:white;font-family:sans-serif;text-align:center;">
+                    <h2 style="color:#ff4d4d;">System Initialization Failed</h2>
+                    <p style="opacity:0.6;font-size:12px;">${msg}</p>
+                    <button onclick="location.reload()" style="margin-top:20px;padding:10px 20px;background:#135bec;border:none;color:white;border-radius:8px;">Retry</button>
+                </div>`;
             }
-            return false;
         };
     </script>
     <style>
-        :root {
-            --sat: env(safe-area-inset-top);
-            --sar: env(safe-area-inset-right);
-            --sab: env(safe-area-inset-bottom);
-            --sal: env(safe-area-inset-left);
-        }
-        body {
-            background-color: #101622;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            width: 100vw;
-            height: 100vh;
-        }
-        #root {
-            width: 100%;
-            height: 100%;
-        }
-        .fallback-loader {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            color: white;
-            font-family: 'Inter', sans-serif;
-            background: radial-gradient(circle at center, #135bec22 0%, #101622 70%);
-        }
-        .spinner {
-            width: 40px;
-            height: 40px;
-            border: 3px solid rgba(255,255,255,0.1);
-            border-top-color: #135bec;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin-bottom: 20px;
-        }
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
+        body { background: #101622; margin: 0; font-family: 'Inter', sans-serif; }
+        .boot-screen { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; color: white; background: radial-gradient(circle at center, #135bec11 0%, #101622 100%); }
+        .spinner { width: 32px; height: 32px; border: 2px solid rgba(255,255,255,0.1); border-top-color: #135bec; border-radius: 50%; animation: spin 0.8s linear infinite; margin-bottom: 24px; }
+        @keyframes spin { to { transform: rotate(360deg); } }
+        .boot-text { font-size: 10px; letter-spacing: 0.5em; text-transform: uppercase; font-weight: 700; opacity: 0.3; }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19",
-    "react-dom": "https://esm.sh/react-dom@19",
-    "react-dom/client": "https://esm.sh/react-dom@19/client",
-    "react/jsx-runtime": "https://esm.sh/react@19/jsx-runtime",
-    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
 </head>
-<body class="bg-background-dark font-display text-white">
+<body>
     <div id="root">
-        <div class="fallback-loader">
+        <div class="boot-screen">
             <div class="spinner"></div>
-            <p style="font-size: 10px; letter-spacing: 0.4em; text-transform: uppercase; font-weight: 900; opacity: 0.4;">
-                Connecting to Aether...
-            </p>
+            <div class="boot-text">Aether System Loading</div>
         </div>
     </div>
-    <!-- 
-      The only script tag responsible for loading the application. 
-      esm.sh/run fetches 'index.tsx' via fetch() to bypass MIME type issues. 
-    -->
+    <!-- Load esm.sh/run which fetches index.tsx as text and transpiles it -->
     <script type="module" src="https://esm.sh/run" data-main="./index.tsx"></script>
 </body>
 </html>
