--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
@@ -18,9 +17,9 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#135bec",
-                        "background-dark": "#101622",
-                        "panchang-accent": "#ff9f43", 
+                        "primary": "var(--color-primary)",
+                        "background-dark": "var(--color-bg)",
+                        "panchang-accent": "var(--color-accent)", 
                     },
                     fontFamily: { sans: ['Inter', 'sans-serif'] },
                 }
@@ -41,17 +40,99 @@
     </script>
     
     <style>
-        body { background: #101622; margin: 0; min-height: 100vh; width: 100vw; overflow-x: hidden; -webkit-font-smoothing: antialiased; }
+        :root {
+            --color-primary: #135bec;
+            --color-bg: #101622;
+            --color-accent: #ff9f43;
+            --glass-bg: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.08);
+            --text-color: #ffffff;
+            --text-muted: rgba(255, 255, 255, 0.5);
+            --card-bg: rgba(255, 255, 255, 0.02);
+            --card-border: rgba(255, 255, 255, 0.05);
+        }
+
+        .theme-eink {
+            --color-primary: #000000;
+            --color-bg: #fdfdfd;
+            --color-accent: #333333;
+            --glass-bg: #ffffff;
+            --glass-border: #000000;
+            --text-color: #000000;
+            --text-muted: #333333;
+            --card-bg: #ffffff;
+            --card-border: #bbbbbb;
+        }
+
+        .theme-daylight {
+            --color-primary: #0066cc;
+            --color-bg: #e0f2f1;
+            --color-accent: #e65100;
+            --glass-bg: rgba(255, 255, 255, 0.9);
+            --glass-border: rgba(0, 102, 204, 0.1);
+            --text-color: #0d47a1;
+            --text-muted: #37474f;
+            --card-bg: rgba(255, 255, 255, 0.6);
+            --card-border: rgba(0, 0, 0, 0.08);
+        }
+
+        .theme-vedic {
+            --color-primary: #FF9933; /* Saffron */
+            --color-bg: #FFFBF2; /* Warm Parchment */
+            --color-accent: #D84315; /* Vermillion */
+            --glass-bg: rgba(255, 255, 255, 0.85);
+            --glass-border: rgba(216, 67, 21, 0.15);
+            --text-color: #3E2723; /* Deep Earthy Brown */
+            --text-muted: #5d4037; /* More visible Brown for labels */
+            --card-bg: rgba(255, 153, 51, 0.08);
+            --card-border: rgba(216, 67, 21, 0.12);
+        }
+
+        body { 
+            background: var(--color-bg); 
+            color: var(--text-color);
+            margin: 0; 
+            min-height: 100vh; 
+            width: 100vw; 
+            overflow-x: hidden; 
+            -webkit-font-smoothing: antialiased;
+            transition: background 0.5s ease, color 0.5s ease;
+        }
+
         .boot-screen { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; color: white; background: radial-gradient(circle at center, #135bec10 0%, #101622 100%); }
         .loader-ring { width: 32px; height: 32px; border: 2px solid rgba(255,255,255,0.05); border-top-color: #135bec; border-radius: 50%; animation: spin 0.8s linear infinite; margin-bottom: 24px; }
         @keyframes spin { to { transform: rotate(360deg); } }
         .boot-label { font-size: 10px; letter-spacing: 0.8em; text-transform: uppercase; font-weight: 900; opacity: 0.2; }
-        .glass-panel { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(24px); -webkit-backdrop-filter: blur(24px); border: 1px solid rgba(255, 255, 255, 0.08); }
-        .glass-card { background: rgba(255, 255, 255, 0.02); border: 1px solid rgba(255, 255, 255, 0.05); }
+        
+        .glass-panel { 
+            background: var(--glass-bg); 
+            backdrop-filter: blur(24px); 
+            -webkit-backdrop-filter: blur(24px); 
+            border: 1px solid var(--glass-border); 
+            transition: all 0.3s ease;
+        }
+        .theme-eink .glass-panel { backdrop-filter: none; border-width: 2px; }
+
+        .glass-card { 
+            background: var(--card-bg); 
+            border: 1px solid var(--card-border); 
+            transition: all 0.3s ease;
+        }
+        .theme-eink .glass-card { border-width: 1px; border-style: dashed; border-color: #999; background: transparent; }
+
         .text-glow { text-shadow: 0 0 20px rgba(255, 255, 255, 0.1); }
-        .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+        .theme-eink .text-glow, .theme-daylight .text-glow, .theme-vedic .text-glow { text-shadow: none; }
+
+        /* Global scrollbar refinements */
+        .custom-scrollbar::-webkit-scrollbar { width: 2px; height: 2px; }
         .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
-        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.1); border-radius: 10px; }
+        .custom-scrollbar::-webkit-scrollbar-thumb { background: var(--text-muted); border-radius: 10px; opacity: 0.2; }
+
+        .vedic-pattern {
+            background-image: radial-gradient(var(--color-primary) 0.5px, transparent 0.5px);
+            background-size: 24px 24px;
+            opacity: 0.05;
+        }
     </style>
 <script type="importmap">
 {
