--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
@@ -102,6 +103,12 @@
         .boot-screen { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; color: white; background: radial-gradient(circle at center, #135bec10 0%, #101622 100%); }
         .loader-ring { width: 32px; height: 32px; border: 2px solid rgba(255,255,255,0.05); border-top-color: #135bec; border-radius: 50%; animation: spin 0.8s linear infinite; margin-bottom: 24px; }
         @keyframes spin { to { transform: rotate(360deg); } }
+        
+        @keyframes shimmer {
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(300%); }
+        }
+
         .boot-label { font-size: 10px; letter-spacing: 0.8em; text-transform: uppercase; font-weight: 900; opacity: 0.2; }
         
         .glass-panel { 
